test/coercions/negative/simple_cycle.mli.expected

*******************************
********** Parsed file ********
*******************************
type t1
type t2
[@@@gospel {| function c1 (x: t1) : t2 |}[@@gospel {| coercion |}]]
[@@@gospel {| function c2 (x: t2) : t1 |}[@@gospel {| coercion |}]]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t1
  

type t2
  

(*@ function c1 ...
    coercion *)

(*@ function c2 ...
    coercion *)
File "simple_cycle.mli", line 8, characters 10-12:
Error: This coercion introduces a cycle;
There is already a coercion from type t1 to type t2:
c1: t1 -> t2
